k8s/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gallery-of-terror-dreams-front-end
  name: front-end
spec:
  selector:
    app: gallery-of-terror-dreams-front-end
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gallery-of-terror-dreams-back-end
  name: back-end
spec:
  selector:
    app: gallery-of-terror-dreams-back-end
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
